sidebar toggle collapsing along with dashboard fixed and css accordingly

--- a/src/styles/Admin/AdminDashboard.css
+++ b/src/styles/Admin/AdminDashboard.css
@@ -1,27 +1,31 @@
+
+
+/*---------------------------------------- dashboard css updated ----------------------------------------*/
+
 .dashboard-section {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: calc(100% - 250px);
     height: 100vh;
     z-index: 1;
-    padding:  2% 2%;;
-    transition: all 0.5s ease, left 0.5s ease, width 0.5s ease;
+    padding: 10px 24px;
 }
 
 .dashboard-content {
     position: relative;
-    left: 5%;
-    width: 90%;
-    padding: 2% 6%;
-    top: -10%;
-    transition: all 0.5s ease;
+    left: 230px;
+    width: 100%;
+    padding-left: 50px;
+    bottom: 10%;
+
 }
 
 .dashboard-content .dashboard-title {
     display: flex;
     align-items: center;
     margin: 60px 0 30px 0;
+    font-size: 24px;
 }
 
 .dashboard-content .dashboard-title i {
@@ -44,19 +48,23 @@
     margin-left: 10px;
 }
 
+
+
+
 .dashboard-content .dashboard-boxes {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
 }
 
 .dashboard-content .dashboard-boxes .dashboard-box {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 12px;
+    border-radius: 15px;
     width: calc(100% / 3 - 15px);
-    padding: 15px 20px;
+    padding: 25px 5px;
     background-color: #4DA3FF;
     transition: all 0.5s ease;
 }
@@ -89,26 +97,22 @@
 }
 
 
-/*.dashboard-section.collapsible {*/
-/*    left: 60px;*/
-/*    width: calc(100% - 600px);*/
-/*}*/
+
+/*------------need to think about collapse and overlapping dashboard content on side bar ....dark coder*/
 
 
-@media (max-width: 768px) {
-    .dashboard-section {
-        padding: 1% 1%;
-    }
 
-    .dashboard-content {
-        left: 2%;
-        width: 96%;
-        padding: 1% 2%;
-        top: -5%;
-    }
 
+.dashboard-content.collapsible {
+    left: 100px;
+    width: calc(90% - 55px);
+    top: 5%;
 
 }
 
 
-/*------------need to think about collapse and overlapping dashboard content on side bar ....dark coder*/
+
+
+
+
+
